tests/snapshots/run_wpt_conformance__coreml_isNaN_float16_positive_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
is_nan.https.any.js isNaN float16 positive 0D scalar, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: isNaN

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    isNaNInput: f16[];
  }

  nodes {
    [isNaNOutput] = isNaN(isNaNInput, label="");
  }

  outputs { isNaNOutput; }
}
