tests/snapshots/run_wpt_conformance__coreml_isNaN_float32_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
is_nan.https.any.js isNaN float32 2D tensor, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: isNaN

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    isNaNInput: f32[2, 2];
  }

  nodes {
    [isNaNOutput] = isNaN(isNaNInput, label="");
  }

  outputs { isNaNOutput; }
}
